--- a/library.properties
+++ b/library.properties
@@ -7,5 +7,5 @@ paragraph=
 category=Data Processing
 url=https://github.com/RobTillaart/DistanceTable
 architectures=*
-includes=DIstanceTable.h
+includes=DistanceTable.h
 depends=
